<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context="com.example.stan.sportbusinesscard.MainActivity">

    <ImageView
        android:scaleType="fitStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/photo_description"

        android:src="@drawable/photo"
        android:id="@+id/image"/>

    <TextView
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />


    <TextView
        style="@style/LightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1"/>
    <TextView
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where" />
    <TextView
        style="@style/LightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:autoLink="map"/>
    <TextView
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/when" />
    <TextView
        style="@style/LightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateOf" />


</LinearLayout>

